Aozora speech processing

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-aozora_audio_dataset
-aozora_audio
+aozora_speech_examples
+aozora_speech_dataset
+aozora_speech
 aozora_dataset
 shosi_dataset
 aozora_examples
